[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "earthengine-api>=1.6.8",
    "folium>=0.20.0",
    "pandas>=2.3.2",
    "streamlit-folium>=0.25.1",
    "streamlit>=1.49.1",
    "matplotlib>=3.10.6",
    "plotly>=6.3.0",
]
